lots of changes including adding a redis caching server
